# TailriskLib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_CHECKLIST.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: API_REFERENCE.md  INSTALLATION.md  README.md  TESTING_GUIDE.md  TUTORIAL.md
examples/: quick_start.py
tailrisk/: __init__.py
tailrisk/metrics/: __init__.py  risk_metrics.py
tailrisk/models/: __init__.py  ensemble.py  hybrid_meta.py  lar_regressor.py
tailrisk/preprocessing/: __init__.py  transforms.py
tailrisk/utils/: __init__.py  plotting.py  validation.py
tests/: __init__.py  test_integration.py  test_metrics.py  test_models.py
